fix(image-block): wrap tags

--- a/src/components/image-block/style/lumapps/_index.scss
+++ b/src/components/image-block/style/lumapps/_index.scss
@@ -114,11 +114,12 @@
 
     &__tags {
         display: flex;
+        flex-wrap: wrap;
         margin-top: $lumx-spacing-unit;
     }
 
     &__tag {
-        margin-right: $lumx-spacing-unit / 2;
+        margin: 2px $lumx-spacing-unit / 2 2px 0;
 
         &:last-child {
             margin-right: 0;
